touch features added

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>BoxFighterWebapp</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=1200, height=800, initial-scale=.4, maximum-scale=.4 ,user-scalable=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
